<?xml version="1.0"?>
<package format="3">
  <name>ros_lidar_sdk</name>
  <version>1.0.0</version>
  <description>The ros_lidar_sdk package</description>
  <maintainer email="jack.xiao@innolight.cn">innolight</maintainer>
  <license>Apache 3.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>lidar_sdk_msg</depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
     <build_type>ament_cmake</build_type>
  </export>
  
</package>



